Final updates: fixed clerk-auth.ts errors and component improvements

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "skipLibCheck": true,
     "allowJs": true,
     "noUnusedLocals": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "lib": ["ES2022", "deno.window"],
+    "types": ["deno.window"]
   }
 }
