--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "env": [
+    "VITE_SUPABASE_URL",
+    "VITE_SUPABASE_ANON_KEY",
+    "VITE_CLERK_PUBLISHABLE_KEY"
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
